--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
-.App {
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +48,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
